--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "min-css": "node-minify --compressor crass --input './pub/style.css' --output 'style.css'",
+    "min-html": "node-minify --compressor html-minifier --input './pub/index.html' --output 'index.html'"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "node-minify": "^3.6.0",
     "node-sass": "^4.9.4"
   }
 }
